--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
 					<h1 class="big-title" style="font-size: 35px; margin-top: -20px;">Feb ??, 2019</h1>
 					<p class="title-desc"><span style="color: #E8D6B0">Hack</span>ing is <span style="color: #E8D6B0">Amaz</span>ing</p>
 					<span id="showsectime"></span>
+					
+							<button class="button_reg">REGISTER</button>
+					
 				</div>
 			</div>
 			<div class="area" >
@@ -78,7 +81,6 @@
 						<li></li>
 				</ul>
     		</div >
-			<button class="button">REGISTER</button>
         </div>
 		
 		
