--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<img class="top-logo" src="images/intro_LOGO-01.png" alt="Boxus" />
 					<br>
 					<h1 class="big-title" style="font-size: 64px;">HACK SMITH 2019</h1>
-					<h1 class="big-title" style="font-size: 35px; margin-top: -20px;">Feb ??, 2019</h1>
+					<h1 class="big-title" style="font-size: 35px; margin-top: -20px;">March 2-3, 2019</h1>
 					<p class="title-desc"><span style="color: #E8D6B0">Hack</span>ing is <span style="color: #E8D6B0">Amaz</span>ing</p>
 					<span id="showsectime"></span>
 					
